[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = "Advent of Code 2023"
authors = ["Michael Rook"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
inflect = "^7.0.0"
word2number = "^1.1"
attrs = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
